--- a/ex5-form.html
+++ b/ex5-form.html
@@ -13,34 +13,34 @@
     <div class="container mt-5">
         <form>
             <div class="row g-3">
-                <div>
-                    <label for="fullName">Full Name</label>
-                    <input type="text" id="fullName">
+                <div class="col-md-6 col-lg-4">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" id="fullName" class="form-control">
                 </div>
 
                 <!-- Email -->
-                <div>
-                    <label for="email">Email address</label>
-                    <input type="email" id="email">
+                <div class="col-md-6 col-lg-4">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" id="email" class="form-control">
                 </div>
 
                 <!-- Gender -->
-                <div>
-                    <label>Gender</label>
-                    <div>
-                        <input type="radio" name="gender" id="male" value="male">
-                        <label for="male">Male</label>
+                <div class="col-md-6 col-lg-4">
+                    <label class="form-label d-block">Gender</label>
+                    <div class="form-check form-check-inline">
+                        <input type="radio" name="gender" id="male" value="male" class="form-check-input">
+                        <label for="male" class="form-check-label">Male</label>
                     </div>
-                    <div>
-                        <input type="radio" name="gender" id="female" value="female">
-                        <label for="female">Female</label>
+                    <div class="form-check form-check-inline">
+                        <input type="radio" name="gender" id="female" value="female" class="form-check-input">
+                        <label for="female" class="form-check-label">Female</label>
                     </div>
                 </div>
 
                 <!-- Country -->
-                <div>
-                    <label for="country">Country</label>
-                    <select id="country">
+                <div class="col-md-6 col-lg-4">
+                    <label for="country" class="form-label">Country</label>
+                    <select id="country" class="form-control">
                         <option selected>Select your country</option>
                         <option>USA</option>
                         <option>Singapore</option>
@@ -49,10 +49,10 @@
                 </div>
 
                 <!-- Subscribe -->
-                <div>
+                <div class="col-md-6 col-lg-4">
                     <div class="mt-4">
-                        <input type="checkbox" id="subscribe">
-                        <label for="subscribe">
+                        <input type="checkbox" id="subscribe" class="form-check-input">
+                        <label for="subscribe" class="form-check-label">
                             Subscribe to newsletter
                         </label>
                     </div>
@@ -60,12 +60,12 @@
 
                 <!-- Message -->
                 <div>
-                    <label for="message">Message</label>
-                    <textarea id="message" rows="4"></textarea>
+                    <label for="message" class="form-label">Message</label>
+                    <textarea id="message" rows="4" class="form-control"></textarea>
                 </div>
 
                 <!-- Submit Button -->
-                <div>
+                <div class="text-center">
                     <button type="submit" class="btn btn-primary mt-3">Submit</button>
                 </div>
             </div>
